--- a/22-django/AprendiendoDjango/miapp/templates/layout.html
+++ b/22-django/AprendiendoDjango/miapp/templates/layout.html
@@ -75,6 +75,7 @@
     </div>
     <footer>
         Master en Python &copy;  {% now "d/m/Y"  %}
+        <a href="http://www.djangoproject.com/"><img src="https://www.djangoproject.com/m/img/badges/djangowish126x70.gif" border="0" alt="A Django site." title="I wish this site was powered by Django." /></a>
     </footer>
 </body>
 
