--- a/crm1/accounts/templates/accounts/dashboard.html
+++ b/crm1/accounts/templates/accounts/dashboard.html
@@ -23,6 +23,7 @@
 
 				{% for customer in customers %}
 					<tr>
+						<td><a class="btn btn-sm btn-info" href="{% url 'customer' customer.id %}">View</a>
 						<td>{{customer.name}}</td>
 						<td>{{customer.phone}}</td>
 					</tr>
@@ -36,7 +37,7 @@
 		<h5>LAST 5 ORDERS</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="">Create Order</a>
+			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'create_order' %}">Create Order</a>
 			<table class="table table-sm">
 				<tr>
 					<th>Product</th>
@@ -51,8 +52,8 @@
 					    <td>{{orders.product}}</td>
 						<td>{{orders.date_created}}</td>
 						<td>{{orders.status}}</td>
-						<td><a href="">Update</a></td>
-						<td><a href="">Delete</a></td>
+						<td><a class ="btn btn-sm btn-info" href="">Update</a></td>
+						<td><a class ="btn btn-sm btn-danger" href="">Delete</a></td>
 					</tr>
 				{% endfor %}
 			</table>
