--- a/crm1/accounts/templates/accounts/navbar.html
+++ b/crm1/accounts/templates/accounts/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+  <div class="container-fluid">
       <img id="logomain" src="{% static "images/LogoBCB.png" %}" alt="">
       <!--<a class="navbar-brand" href="#">Navbar</a>-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,10 +10,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">dashboard</a>
+            <a class="nav-link" href="{% url 'home' %}">dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Products</a>
+            <a class="nav-link" href="{% url 'products' %}">Products</a>
           </li>
         </ul>
       </div>
