--- a/crm1/accounts/templates/accounts/customer.html
+++ b/crm1/accounts/templates/accounts/customer.html
@@ -8,8 +8,8 @@
         <div class='card card-body'>
             <h5>Customer</h5>
             <hr>
-            <a class='btn btn-outline-info btn-sm btn-block' href=''>Update Customer</a>
-            <a class='btn btn-outline-danger btn-sm btn-block' href=''>Delete Customer</a>
+            <a class='btn btn-outline-info btn-sm btn-block' href="">Update Customer</a>
+            <a class='btn btn-outline-danger btn-sm btn-block' href="">Delete Customer</a>
         </div>
     </div>
 
@@ -26,7 +26,7 @@
         <div class='card card-body'>
             <h5>Total Order</h5>
             <hr>
-            <h1 style='text-align: center; padding: 10px'>{{orders.count}}</h1>
+            <h1 style='text-align: center; padding: 10px'>{{order_count}}</h1>
         </div>
     </div>
 </div>
@@ -61,8 +61,9 @@
                     <td>{{order.product.category }}</td>
                     <td>{{order.date_created}}</td>
                     <td>{{order.status}}</td>
-                    <td><a class="btn btn-sm btn-info" href="">Update</a></td>
-                    <td><a class="btn btn-sm btn-danger" href="">Remove</a></td>
+                    <td><a class ="btn btn-sm btn-info" href="{% url 'update_order' order.id %}">Update</a></td>
+                    <td><a class ="btn btn-sm btn-danger" href="{% url 'delete_order' order.id %}">Delete</a></td>
+
                 </tr>
                 {% endfor %}
             </table>
