Carga de Customer

--- a/crm1/accounts/templates/accounts/customer_form.html
+++ b/crm1/accounts/templates/accounts/customer_form.html
@@ -4,10 +4,13 @@
 <br>
 
 <form action="" method="POST">
+
     {% csrf_token %}
     {{form}}
 
-    <input type="submit" name="Submit">
+    <input type="submit" name="Enviar">
+
 </form>
+
 
 {% endblock %}
