--- a/crm1/static/css/main.css
+++ b/crm1/static/css/main.css
@@ -21,3 +21,6 @@ body{
 #orders-pending{
             background-color: #231fe7;
         }
+#mov-cliente{
+            background-color: rgb(6, 70, 112);
+}
