--- a/crm1/accounts/templates/accounts/customer.html
+++ b/crm1/accounts/templates/accounts/customer.html
@@ -5,8 +5,8 @@
 <br>
 <div class='row'>
     <div class='col-md'>
-        <div class='card card-body'>
-            <h5>Customer</h5>
+        <div class='card card-body' id="mov-cliente">
+            <h5>Cliente</h5>
             <hr>
             <a class='btn btn-outline-info btn-sm btn-block' href="">Update Customer</a>
             <a class='btn btn-outline-danger btn-sm btn-block' href="">Delete Customer</a>
@@ -14,8 +14,8 @@
     </div>
 
     <div class='col-md'>
-        <div class='card card-body'>
-            <h5>Contact Information</h5>
+        <div class='card card-body' id="mov-cliente">
+            <h5>Información</h5>
             <hr>
             <p>Email:   {{customer.email}}</p>
             <p>Phone:   {{customer.phone}}</p>
@@ -23,7 +23,7 @@
     </div>
 
     <div class='col-md'>
-        <div class='card card-body'>
+        <div class='card card-body' id="mov-cliente">
             <h5>Total Order</h5>
             <hr>
             <h1 style='text-align: center; padding: 10px'>{{order_count}}</h1>
