--- a/crm1/accounts/templates/accounts/dashboard.html
+++ b/crm1/accounts/templates/accounts/dashboard.html
@@ -10,7 +10,7 @@
 		<h5>CLIENTES:</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
+			<a class="btn btn-primary btn-lg" href="{% url 'create_customer' %}"><i class="bi bi-briefcase-fill"></i>  Create Customer</a>
 			<table class="table table-sm">
 				<tr>
 					<th>View</th>
@@ -34,7 +34,7 @@
 		<h5>ASUNTOS RECIENTES</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'create_order' %}">Create Order</a>
+			<a class="btn btn-primary  btn-lg" href="{% url 'create_order' %}"><i class="bi bi-clipboard-check-fill"></i>  Create Order</a>
 			<table class="table table-sm">
 				<tr>
 					<th>id</th>
