--- a/crm1/accounts/templates/accounts/status.html
+++ b/crm1/accounts/templates/accounts/status.html
@@ -5,7 +5,7 @@
 		<div class="col-md">
 			<div class="card text-center text-white  mb-3" id="total-orders">
 			  	<div class="card-header">
-			  		<h5 class="card-title">Total Orders</h5>
+			  		<h5 class="card-title"><i class="bi bi-pie-chart-fill"></i> Total Orders</h5>
 			  	</div>
 			  	<div class="card-body">
 			    	<h3 class="card-title">{{total_orders}}</h3>
