Copia de DashboardOrdenxOrden

--- a/crm1/accounts/templates/accounts/order_form.html
+++ b/crm1/accounts/templates/accounts/order_form.html
@@ -3,11 +3,17 @@
 {% block content %}
 <br>
 
-<form action="" method="POST">
-    {% csrf_token %}
-    {{form}}
+<div class="row">
+    <div>
+        <div>
+            <form action="" method="POST">
+                {% csrf_token %}
+                {{form}}
 
-    <input type="submit" name="Submit">
-</form>
+                <input type="submit" name="Submit">
+            </form>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
