--- a/crm1/static/css/main.css
+++ b/crm1/static/css/main.css
@@ -22,5 +22,5 @@ body{
             background-color: #231fe7;
         }
 #mov-cliente{
-            background-color: rgb(6, 70, 112);
+            background-color: #4b65d4;
 }
