--- a/crm1/accounts/templates/accounts/customer.html
+++ b/crm1/accounts/templates/accounts/customer.html
@@ -6,10 +6,10 @@
 <div class='row'>
     <div class='col-md'>
         <div class='card card-body' id="mov-cliente">
-            <h5>Cliente</h5>
+            <h5>Cliente:    {{customer.name}}</h5>
             <hr>
             <a class='btn btn-outline-info btn-sm btn-block' href="">Update Customer</a>
-            <a class='btn btn-outline-danger btn-sm btn-block' href="">Delete Customer</a>
+            <a class='btn btn-outline-info btn-sm btn-block' href="{% url 'create_order' customer.id %}">Place Order</a>
         </div>
     </div>
 
@@ -35,7 +35,9 @@
 <div class='row'>
     <div class='col'>
         <div class='card card-body'>
+
             <form method="get">
+                {{myFilter.form}}
                 <button class='btn btn-primary' type="submit">Search</button>
             </form>
         </div>
@@ -49,7 +51,7 @@
             <table class='table table-sm'>
                 <tr>
                     <th>Product</th>
-                    <th>Category</th>
+                    <th>Note</th>
                     <th>Date Order</th>
                     <th>Status</th>
                     <th>Update</th>
@@ -58,7 +60,7 @@
                 {% for order in orders %}
                 <tr>
                     <td>{{order.product}}</td>
-                    <td>{{order.product.category }}</td>
+                    <td>{{order.note }}</td>
                     <td>{{order.date_created}}</td>
                     <td>{{order.status}}</td>
                     <td><a class ="btn btn-sm btn-info" href="{% url 'update_order' order.id %}">Update</a></td>
