--- a/crm1/accounts/templates/accounts/order_form.html
+++ b/crm1/accounts/templates/accounts/order_form.html
@@ -4,11 +4,15 @@
 <br>
 
 <div class="row">
-    <div>
-        <div>
+    <div class="col-md-6">
+        <div class="card card-body">
             <form action="" method="POST">
                 {% csrf_token %}
-                {{form}}
+                {{ formset.management_form }}
+                {% for form in formset %}
+                    {{form}}
+                    <hr>
+                {% endfor %}
 
                 <input type="submit" name="Submit">
             </form>
