Carga Correcta Login 28-Mar-22

--- a/crm1/accounts/templates/accounts/navbar.html
+++ b/crm1/accounts/templates/accounts/navbar.html
@@ -18,4 +18,6 @@
         </ul>
       </div>
     </div>
+    <span class="hello-msg">Bienvenid@, {{request.user}}</span>
+    <span><a class="hello-msg" href="{% url 'logout' %}">Logout</a></span>
   </nav>
