--- a/crm1/accounts/templates/accounts/login.html
+++ b/crm1/accounts/templates/accounts/login.html
@@ -45,7 +45,7 @@
 
 		.login_btn {
 			width: 100%;
-			background: #0f56bf !important;
+			background: #0033a1 !important;
 			color: white !important;
 		}
 		.login_btn:focus {
@@ -56,7 +56,7 @@
 			padding: 0 2rem;
 		}
 		.input-group-text {
-			background: #0f56bf !important;
+			background: #0033a1 !important;
 			color: white !important;
 			border: 0 !important;
 			border-radius: 0.25rem 0 0 0.25rem !important;
@@ -81,12 +81,11 @@
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
-
-
 					<h3 id="form-title">LOGIN</h3>
 				</div>
 				<div class="d-flex justify-content-center form_container">
 					<form method="POST" action="">
+						{% csrf_token %}
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="bi bi-person-square"></i></span>
