--- a/crm1/accounts/templates/accounts/register.html
+++ b/crm1/accounts/templates/accounts/register.html
@@ -42,7 +42,7 @@
 		}
 		.login_btn {
 			width: 100%;
-			background: #0f56bf !important;
+			background: #0033a1!important;
 			color: white !important;
 		}
 		.login_btn:focus {
@@ -53,7 +53,7 @@
 			padding: 0 2rem;
 		}
 		.input-group-text {
-			background: #0f56bf !important;
+			background: #0033a1 !important;
 			color: white !important;
 			border: 0 !important;
 			border-radius: 0.25rem 0 0 0.25rem !important;
