--- a/crm1/static/css/main.css
+++ b/crm1/static/css/main.css
@@ -9,6 +9,12 @@
     width: 50px;
     height: 50px;
 }*/
+.hello-msg{
+    font-size: 18px;
+    color:#0033a1;
+    margin-right: 15px;
+}
+
 body{
         background-color: #66789938;
     }
