Carga Correcta de Login

--- a/crm1/accounts/templates/accounts/dashboard.html
+++ b/crm1/accounts/templates/accounts/dashboard.html
@@ -52,7 +52,7 @@
 						<td>{{orders.status}}</td>
 						
 
-						<td><a class ="btn btn-sm btn-info" href="{% url 'update_order' orders.id %}"> Update</a></td>
+						<td><a class ="btn btn-sm btn-warning" href="{% url 'update_order' orders.id %}"> Update</a></td>
 						<td><a class ="btn btn-sm btn-danger" href="{% url 'delete_order' orders.id %}">Delete</a></td>
 
 					</tr>
