--- a/crm1/accounts/templates/accounts/login.html
+++ b/crm1/accounts/templates/accounts/login.html
@@ -111,9 +111,11 @@
 		
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
+						No tienes cuenta? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
 					</div>
-			
+					<div class="d-flex justify-content-center links">
+						Olvidaste tu password? <a href="{% url 'reset_password' %}" class="ml-2">Sign Up</a>
+					</div>
 				</div>
 			</div>
 		</div>
